# Sistem-Manajemen-Cafe

./: .gitignore  CMakeLists.txt  main.c
%SystemDrive%/ProgramData/Microsoft/Windows/Caches/: cversions.2.db  {65602DF3-4C76-4C81-9595-739B658F1F7D}.2.ver0x0000000000000003.db  {6AF0698E-D558-4F6E-9B3C-3716689AF493}.2.ver0x0000000000000003.db  {DDF571F2-BE98-426D-8288-1A9A39C3FDA2}.2.ver0x0000000000000003.db
Header/: AdminMenu.h  KasirMenu.h  LaporanTransaksi.h  LoadingScreen.h  LoginScreen.h  OwnerMenu.h  Struct.h  lib.h
Header/Master/: Master_Diskon.h  Master_JenisMenu.h  Master_Menu.h  Master_Merchandise.h  Master_PaketMenu.h  Master_Pegawai.h  Master_Role.h  Master_Ruangan.h
Header/Transaksi/: BookingRuangan.h  PendaftaranMember.h  PenjualanMerchandise.h  PesananMakanandanMinuman.h
Picture/: Cafe Alfarani Text.txt  Cake 1 - Pojok kanan atas.txt  Cake 1 - Pojok kanan bawah.txt  Coffee Cup.txt  Coffee Machine.txt  Dashboard Admin - Text.txt  Dashboard Kasir - Text.txt  Dashboard Owner - Text.txt  Owner Icon.txt  Owner Text.txt  Profile Icon.txt  Puzzle Pattern - kanan atas.txt  Puzzle Pattern - kanan bawah.txt  Puzzle Pattern - kanan tengah.txt  Puzzle Pattern - kiri atas.txt  Puzzle Pattern - kiri bawah.txt  Puzzle Pattern - kiri tengah.txt
